--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -1,7 +1,3 @@
-* {
-  background-color: #ffffff;
-}
-
 h1 {
   text-align: center;
 }
@@ -12,4 +8,77 @@ h2 {
 
 a {
   text-align: center;
+}
+
+body {
+  margin: 0;
+  font-family: "Hiragino Kaku Gothic ProN";
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  width: 1170px;
+  height: 350px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.top-wrapper {
+  padding: 180px 0 100px 0;
+  background-image: url(../img/entrance.jpg);
+  background-size: cover;
+  color: white;
+  /* text-alignをcenterに指定してください */
+  text-align: center;
+}
+
+.top-wrapper h1 {
+  opacity: 0.7;
+  font-size: 45px;
+  letter-spacing: 5px;
+}
+
+.top-wrapper p {
+  opacity: 0.7;
+}
+
+.btn {
+  padding: 8px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  /* border-radiusを4pxに指定してください */
+  border-radius: 4px;
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+/* btnクラスにhoverしたときのCSSを指定してください */
+.btn :hover {
+  opacity: 1;
+}
+
+
+.signup {
+  background-color: #239b76;
+}
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: #55acee;
+}
+
+.btn-wrapper {
+  margin: 20px 0;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
 }
