--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -179,3 +179,37 @@ header {
   padding: 0 300px;
   text-align: left;
 }
+.css-fukidashi {
+  padding: 0;
+  margin: 0;
+}
+   
+.fukidashi {
+  display: none;
+  width: 200px;
+  position: absolute;
+  top: 0;
+  left: 250px;
+  padding: 16px;
+  border-radius: 5px;
+  background: #33cc99;
+  color: #fff;
+  font-weight: bold;
+}
+.fukidashi:after {
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 0;
+  bottom: -19px;
+  margin-left: 10px;
+  border: solid transparent;
+  border-color: rgba(51, 204, 153, 0);  
+  border-top-color: #33cc99;
+  border-width: 10px;
+  pointer-events: none;
+  content: " ";
+}
+.text:hover + .fukidashi {
+  display: block;
+}
