--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -179,37 +179,106 @@ header {
   padding: 0 300px;
   text-align: left;
 }
-.css-fukidashi {
-  padding: 0;
-  margin: 0;
+
+.tooltip5{
+    position: relative;
+    cursor: pointer;
+    display:  inline-block;
 }
-   
-.fukidashi {
-  display: none;
-  width: 200px;
-  position: absolute;
-  top: 0;
-  left: 250px;
-  padding: 16px;
-  border-radius: 5px;
-  background: #33cc99;
-  color: #fff;
-  font-weight: bold;
+.tooltip5 img{
+    width: 20px;
 }
-.fukidashi:after {
-  position: absolute;
-  width: 0;
-  height: 0;
-  left: 0;
-  bottom: -19px;
-  margin-left: 10px;
-  border: solid transparent;
-  border-color: rgba(51, 204, 153, 0);  
-  border-top-color: #33cc99;
-  border-width: 10px;
-  pointer-events: none;
-  content: " ";
+.description5 {
+    display: none;
+    position: absolute;
+    padding: 10px;
+    font-size: 12px;
+    line-height: 1.6em;
+    color: #fff;
+    border-radius: 5px;
+    background: #000;
+    width: 100px;
 }
-.text:hover + .fukidashi {
-  display: block;
+
+.description5:before {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    border: 15px solid transparent;
+    border-top: 15px solid #000;
+    margin-left: -15px;
+}
+.tooltip5:hover .description5{
+    display: inline-block;
+    top: -75px;
+    left: -50px;
+}
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+.tooltip{
+    position: relative;
+    cursor: pointer;
+    display:  inline-block;
+}
+.tooltip img{
+    width: 20px;
+}
+.description {
+    display: none;
+    position: absolute;
+    padding: 10px;
+    font-size: 12px;
+    line-height: 1.6em;
+    color: #fff;
+    border-radius: 5px;
+    background: #000;
+    width: 100px;
+}
+ 
+.description:before {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    border: 15px solid transparent;
+    border-top: 15px solid #000;
+    margin-left: -15px;
+}
+.tooltip:hover .description{
+    display: inline-block;
+    top: -75px;
+    left: -50px;
 }
