--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -196,7 +196,7 @@ header {
     line-height: 1.6em;
     color: #fff;
     border-radius: 15px;
-    background: #000;
+    background:rgba(,0,255,0.20);
     width: 150px;
 }
 
