--- a/stylesheet/liveview.css
+++ b/stylesheet/liveview.css
@@ -10,8 +10,8 @@ body{
 main{
     display: flex;
     /* min-height: 100vh; */
-    margin: 10px 0 10px 0;
-    right: 0px;
+    margin-left:auto;
+    margin-right:auto;
 }
 .content-area{
     display: flex;
